# multimodal-injection-detector

./: .gitignore  README.md  download_cyberseceval.py  main.py  pyproject.toml  visualize_samples.py
dataset_metadata/: chartqa_injection_dataset.jsonl  coco_injection_dataset.jsonl  docvqa_injection_dataset.jsonl  stvqa_injection_dataset.jsonl  textcaps_injection_dataset.jsonl
download_datasets/: chartqa.py  coco_caption.py  docvqa.py  stvqa.py  textcaps.py
notebooks/: docvqa_data_preparation.ipynb
preprocess_datasets/: preprocess_chartqa_to_injection.py  preprocess_coco_to_injection.py  preprocess_docvqa_to_injection.py  preprocess_stvqa_to_injection.py  preprocess_textcaps_to_injection.py
scripts/: TODO.md  json_to_jsonl.py  move_hf_folder.py  upload_to_hf.py
tests/: fix_chartqa_metadata.py  test_chartqa_structure.py  test_llm_response.py  test_preprocessing_setup.py
