[project]
name = "multimodal-injection-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes==0.45.4",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "markupsafe==2.1.5",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.57.1",
]

[tool.uv.extra-build-dependencies]
    flash-attn = ["torch"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[[tool.uv.index]]
url = "https://pypi.org/simple"
